--- a/data_analysis_code.Rmd
+++ b/data_analysis_code.Rmd
@@ -34,175 +34,7 @@ load(file = file.path("dataset_full.rdata"))
 
 load(file = file.path("dataset_complete_cases.rdata"))
 
-```
-
-
-
-```{r preliminary data analysis, eval=FALSE, include=FALSE}
-
-# load data
-load(file = file.path("causal_inference_preliminary_dataset.rdata"))
-
-# relabel variables
-data_for_table_one <- 
-  causal_inference_preliminary_dataset %>% 
-  mutate("PM25" = factor(pm25_12_plus),
-         "School enrollment (n)" = school_k_12_enrollment,
-         "Female (%)" = round(percent_female*100, 2),
-         "African American (%)" = round(percent_afr_am*100, 2),
-         "American Indian or Alaska Native (%)" = round(percent_aian*100, 2),
-         "Asian (%)" = round(percent_asian*100, 2),
-         "Filipino (%)" = round(percent_filipino*100, 2),
-         "Hispanic/Latino (any race) (%)" = round(percent_hispanic_latino*100, 2),
-         "Pacific Islander (%)" = round(percent_pacific_islander*100, 2),
-         "White (%)" = round(percent_white*100, 2),
-         "Two or more races (not Hispanic/Latino) (%)" = round(percent_two_plus*100, 2),
-         "Race/ethnicity not reported (%)" = round(percent_not_reported*100, 2),
-         "Chronic absenteeism (%)" = as.numeric(chronic_absenteeism_rate),
-         "Suspension rate (%)" = as.numeric(suspension_rate), 
-         "Free meal eligibility (%)" = free_lunch_percent, 
-         "Free/reduced-price meal eligibility (%)" = frpm_percent, 
-         "English learners (%)" = round(english_learner_percent*100, 2),
-         "English standard met or exceeded (%)" = as.numeric(english_standard_met), 
-         "Math standard met or exceeded (%)" = as.numeric(math_standard_met), 
-         "Science standard met or exceeded (%)" = as.numeric(science_standard_met), 
-         "Overall mean of standards met or exceeded (%)" = round(as.numeric(overall_standard_met), 2)) %>% 
-  select("PM25",
-         "School enrollment (n)",
-         "Female (%)",
-         "African American (%)",
-         "American Indian or Alaska Native (%)",
-         "Asian (%)",
-         "Filipino (%)",
-         "Hispanic/Latino (any race) (%)",
-         "Pacific Islander (%)",
-         "White (%)",
-         "Two or more races (not Hispanic/Latino) (%)",
-         "Race/ethnicity not reported (%)",
-         "Chronic absenteeism (%)",
-         "Suspension rate (%)", 
-         "Free meal eligibility (%)", 
-         "Free/reduced-price meal eligibility (%)", 
-         "English learners (%)",
-         "English standard met or exceeded (%)", 
-         "Math standard met or exceeded (%)", 
-         "Science standard met or exceeded (%)", 
-         "Overall mean of standards met or exceeded (%)") %>% 
-  st_drop_geometry() %>% 
-  as.data.frame()
-
-
-
-# create a list of variables for the table
-# (not including the stratification variable)
-table_one_variables <- 
-  c(     "School enrollment (n)",
-         "Female (%)",
-         "African American (%)",
-         "American Indian or Alaska Native (%)",
-         "Asian (%)",
-         "Filipino (%)",
-         "Hispanic/Latino (any race) (%)",
-         "Pacific Islander (%)",
-         "White (%)",
-         "Two or more races (not Hispanic/Latino) (%)",
-         "Race/ethnicity not reported (%)",
-         "Chronic absenteeism (%)",
-         "Suspension rate (%)", 
-         "Free meal eligibility (%)", 
-         "Free/reduced-price meal eligibility (%)", 
-         "English learners (%)",
-         "English standard met or exceeded (%)", 
-         "Math standard met or exceeded (%)", 
-         "Science standard met or exceeded (%)", 
-         "Overall mean of standards met or exceeded (%)")
-
-table_one <- CreateTableOne(vars = table_one_variables,
-                            # factorVars = factor_variables,
-                            strata = "PM25",
-                            data = data_for_table_one,
-                            test = FALSE,
-                            includeNA = TRUE)
-
-save(table_one, 
-     file = "table_one.rdata")
-
-# Creates a formatted table, using kable from the knitr package
-# Would want to clean this up for publication purposes:
-hi <- kable(print(table_one,
-                  showAllLevels = TRUE,
-                  printToggle = FALSE,
-                  noSpaces = TRUE,
-                  catDigits = 1,
-                  contDigits = 1),
-            col.names = c("", "Mean PM2.5 <= 12 ug/m3", "Mean PM2.5 > 12 ug/m3"),
-            caption=paste(".  Descriptive statistics for California public schools in 2018-19, stratified by 2018 mean PM2.5 concentration.")) %>% 
-  kable_styling("striped")
-
-hi
-
-
-expression(paste("Mean PM"["2.5"]," concentration (",mu,"g/m"^"3",") in 2018"))
-
-# make plots
-
-# histogram for test scores
-ggplot(data = data_for_table_one, 
-       aes(x = `Overall mean of standards met or exceeded (%)`)) +
-  geom_histogram(binwidth = 1) +
-  xlab("Mean percentage of students who met or exceeded standard across \nEnglish, science, and math in 2018-19") +
-  ylab("Count")
-
-# histogram for air pollution
-ggplot(data = causal_inference_preliminary_dataset, 
-       aes(x = modeled_air_at_school)) +
-  geom_histogram(binwidth = 0.1) +
-  xlab(expression(paste("Mean PM"["2.5"]," concentration (",mu,"g/m"^"3",") in 2018"))) +
-  ylab("Count")
-
-# make basic scatterplot with line through it
-ggplot(data = causal_inference_preliminary_dataset, 
-       aes(x = modeled_air_at_school, 
-           y = overall_standard_met)) +
-  geom_point(color = "blue", alpha = 0.5) +
-  geom_smooth(method=loess, 
-              se=TRUE, 
-              color="darkred") +
-  xlab(expression(paste("Mean PM"["2.5"]," concentration (",mu,"g/m"^"3",") in 2018"))) +
-  ylab("Mean Percentage of Students Who Met or Exceeded Standard \n(English, Science, and Math) in 2018-19")
-
-# get basic summary statistics
-mean(causal_inference_preliminary_dataset$overall_standard_met)
-summary(causal_inference_preliminary_dataset$overall_standard_met)
-sd(causal_inference_preliminary_dataset$overall_standard_met)
-
-
-
-load(file = file.path( "causal_inference_preliminary_dataset.rdata"))
-
-load(file = file.path("intermediate_data", "air_cropped.rdata"))
-
-# plot air data
-plot(air_cropped)
-
-dev.off()
-
-load(file = file.path("intermediate_data", "california_shapefile.rdata"))
-
-# make plot of modeled air at each school
-plot.new()
-
-plot(california_shapefile[1], main=NULL, color=rgb(1, 1, 1, alpha = 1), border = "black", add=TRUE)
-plot(causal_inference_preliminary_dataset["modeled_air_at_school"], pch=16, cex=0.4, 
-     xlab=NULL, ylab=NULL, main=NULL)
-title(main = expression(paste("Mean PM"["2.5"]," concentration (",mu,"g/m"^"3",") in 2018")))
-
-# plot test scores
-plot(causal_inference_preliminary_dataset["overall_standard_met"], pch=16, cex=0.4, 
-     xlab=NULL, ylab=NULL, main=NULL, pal=brewer.pal(10, "RdYlGn"))
-
-mean(causal_inference_preliminary_dataset$modeled_air_at_school)
-sd(causal_inference_preliminary_dataset$modeled_air_at_school)
+View(dataset_complete_cases)
 
 ```
 
